tests/e2e/keywords/float_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    float = 1
      ^^^^^

E0020: `float` is a reserved keyword
